--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "redux-thunk": "^2.4.1"
   },
